feat: Add UI and logic for managing team display names, including new localization strings.

--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -305,6 +305,10 @@
           url_hidden: "Hidden for Streamer mode.",
           team_invite_url_label: "Team Invite URL",
           display_name_label: "Team Display Name",
+          display_name_placeholder: "Enter your display name (max 15 chars)",
+          display_name_hint: "This name will be shown to your teammates (max 15 characters)",
+          display_name_saved: "Display name saved successfully",
+          save: "Save",
           show_link: "Show",
           hide_link: "Hide",
           copy_link: "Copy",
