--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# GitHub issue integration
+# Core application configuration
+VITE_SUPABASE_URL=https://your-supabase-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anonymous_key
+
+# GitHub issue integration (optional for /report-issue)
 GITHUB_BOT_TOKEN=ghp_your_bot_token_here
 GITHUB_REPO_OWNER=tarkovtracker-org
 GITHUB_REPO_NAME=tarkovtrackernuxt
