add some info in quest tree

--- a/app/locales/de.json5
+++ b/app/locales/de.json5
@@ -161,9 +161,20 @@
         completed: 'Abgeschlossen',
         empty: 'Keine Quests in den aktuellen Daten verfügbar.',
         unknown_trader: 'Unbekannter Händler',
+        unknown_name: 'Unbekannte Quest',
         expand_all: 'Alle öffnen',
         collapse_all: 'Alle schließen',
         context_only: 'Zur Orientierung angezeigt (außerhalb der aktuellen Filter)',
+        kappa: 'Kappa',
+        lightkeeper: 'Lightkeeper',
+        finish: 'Abschließen',
+        cancel: 'Rückgängig',
+        min_level: 'Stufe {level}',
+        expand: 'Vergrößern',
+        collapse: 'Einklappen',
+        objectives: 'Ziele',
+        objective_unknown: 'Ziel',
+        no_objectives: 'Keine Ziele vorhanden',
       },
     },
     traders: {
