--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -179,9 +179,20 @@
         completed: 'Completed',
         empty: 'No quests found in the current dataset.',
         unknown_trader: 'Unknown trader',
+        unknown_name: 'Unknown quest',
         expand_all: 'Expand all',
         collapse_all: 'Collapse all',
         context_only: 'Shown for context (outside current filters)',
+        kappa: 'Kappa',
+        lightkeeper: 'Lightkeeper',
+        finish: 'Finish',
+        cancel: 'Undo',
+        min_level: 'Lv {level}',
+        expand: 'Expand',
+        collapse: 'Collapse',
+        objectives: 'Objectives',
+        objective_unknown: 'Objective',
+        no_objectives: 'No objectives listed',
       },
     },
     traders: {
