--- a/app/locales/es.json5
+++ b/app/locales/es.json5
@@ -139,9 +139,20 @@
         completed: 'Completada',
         empty: 'No hay misiones disponibles en los datos actuales.',
         unknown_trader: 'Comerciante desconocido',
+        unknown_name: 'Misión desconocida',
         expand_all: 'Expandir todo',
         collapse_all: 'Contraer todo',
         context_only: 'Mostrado como contexto (fuera de los filtros actuales)',
+        kappa: 'Kappa',
+        lightkeeper: 'Lightkeeper',
+        finish: 'Terminar',
+        cancel: 'Deshacer',
+        min_level: 'Nv {level}',
+        expand: 'Agrandar',
+        collapse: 'Contraer',
+        objectives: 'Objetivos',
+        objective_unknown: 'Objetivo',
+        no_objectives: 'Sin objetivos listados',
       },
     },
     traders: {
