--- a/app/locales/fr.json5
+++ b/app/locales/fr.json5
@@ -161,9 +161,20 @@
         completed: 'Terminée',
         empty: 'Aucune quête disponible dans les données actuelles.',
         unknown_trader: 'Marchand inconnu',
+        unknown_name: 'Quête inconnue',
         expand_all: 'Tout déployer',
         collapse_all: 'Tout replier',
         context_only: 'Affiché pour le contexte (hors des filtres actuels)',
+        kappa: 'Kappa',
+        lightkeeper: 'Lightkeeper',
+        finish: 'Finir',
+        cancel: 'Annuler',
+        min_level: 'Niv {level}',
+        expand: 'Agrandir',
+        collapse: 'Réduire',
+        objectives: 'Objectifs',
+        objective_unknown: 'Objectif',
+        no_objectives: 'Aucun objectif renseigné',
       },
     },
     traders: {
