--- a/app/locales/ru.json5
+++ b/app/locales/ru.json5
@@ -161,9 +161,20 @@
         completed: 'Выполнено',
         empty: 'В текущих данных нет заданий.',
         unknown_trader: 'Неизвестный торговец',
+        unknown_name: 'Неизвестное задание',
         expand_all: 'Развернуть все',
         collapse_all: 'Свернуть все',
         context_only: 'Показано для контекста (вне текущих фильтров)',
+        kappa: 'Каппа',
+        lightkeeper: 'Лайткипер',
+        finish: 'Завершить',
+        cancel: 'Отменить',
+        min_level: 'Ур. {level}',
+        expand: 'Раскрыть',
+        collapse: 'Свернуть',
+        objectives: 'Цели',
+        objective_unknown: 'Цель',
+        no_objectives: 'Нет указанных целей',
       },
     },
     traders: {
