--- a/app/locales/uk.json5
+++ b/app/locales/uk.json5
@@ -161,9 +161,20 @@
         completed: 'Завершено',
         empty: 'У поточних даних немає завдань.',
         unknown_trader: 'Невідомий торговець',
+        unknown_name: 'Невідоме завдання',
         expand_all: 'Розгорнути все',
         collapse_all: 'Згорнути все',
         context_only: 'Показано для контексту (поза поточними фільтрами)',
+        kappa: 'Kappa',
+        lightkeeper: 'Lightkeeper',
+        finish: 'Завершити',
+        cancel: 'Скасувати',
+        min_level: 'Рів. {level}',
+        expand: 'Розгорнути',
+        collapse: 'Згорнути',
+        objectives: 'Цілі',
+        objective_unknown: 'Ціль',
+        no_objectives: 'Немає вказаних цілей',
       },
     },
     traders: {
