feat: add SEO improvements, loading screen, and automatic level calculation
This commit introduces several major improvements to the application:

SEO & Meta Tags:
- Add dynamic canonical URLs and Open Graph URLs based on current route
- Add page-specific meta descriptions for all major pages (dashboard, tasks, hideout, team, traders, needed items, settings, login, privacy, terms)
- Improve search engine discoverability and social media sharing

Loading Experience:
- Add LoadingScreen component to provide visual feedback during initial data load
- Implement retry logic with exponential backoff in metadata plugin (up to 3 attempts)
- Add user-facing error toast when critical data fails to load after all retries
- Improve loading state checks across hideout filtering and tasks page

Automatic Level Calculation:
- Add new preference toggle for automatic level calculation based on total XP
- When enabled, player level is automatically derived from XP calculations
- When disabled, users can manually set their level independently (useful for Arena XP, raids, etc.)
- Update DrawerLevel component to respect automatic calculation preference
- Disable manual level editing controls when automatic mode is active
- Add warning alerts and tooltips to explain the feature
- Sync manual level with derived level when re-enabling automatic mode

Server-Side Robustness:
- Add comprehensive error handling and validation to tarkov data API endpoint
- Implement GraphQL response validation with custom error types
- Add data sanitization to handle invalid API responses (null skill rewards)
- Create server-side logger utility for consistent logging
- Add overlay utility for data manipulation and testing
- Enhance edge cache with better error handling and retry logic

UI Polish & Accessibility:
- Add image error handling in DrawerLevel with fallback icons
- Add loading placeholders for faction and level badge images
- Change button colors from "gray" to "neutral" for better consistency
- Remo

--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -550,6 +550,9 @@
     experience: {
       title: 'Experience & Level',
       explanation: 'Quest XP is auto-calculated. Use the offset to add XP from daily quests, kills, and other gameplay.',
+      auto_level_title: 'Automatic Level Calculation',
+      auto_level_description: 'When enabled, your level will be automatically calculated based on total XP. When disabled, you can manually set your level independently of XP calculations.',
+      manual_level_warning: 'Manual level mode is active. This allows you to set your level independently of your automatically calculated level, which can be useful if your in-game level differs due to Arena, raids, or other XP sources not tracked here.',
       current_level: 'Current Level',
       breakdown: 'XP Breakdown',
       set_total_xp: 'Set Total XP',
