--- a/package.json
+++ b/package.json
@@ -21,20 +21,21 @@
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.3.0",
     "@pinia/nuxt": "^0.11.3",
-    "@supabase/supabase-js": "^2.88.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@unhead/vue": "^2.0.19",
     "@vueuse/core": "^14.1.0",
     "d3": "^7.9.0",
     "eslint": "^9.39.2",
     "graphology": "^0.26.0",
     "graphology-types": "^0.24.8",
+    "ipaddr.js": "^2.3.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
     "qrcode": "^1.5.4",
-    "sass": "^1.97.0",
+    "sass": "^1.97.1",
     "typescript": "^5.9.3",
-    "vue": "^3.5.25",
+    "vue": "^3.5.26",
     "vue-i18n": "^11.2.2",
     "vue-router": "^4.6.4"
   },
@@ -56,7 +57,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "supabase": "^2.67.2",
+    "supabase": "^2.67.3",
     "tailwindcss": "^4.1.18",
     "vitest": "^3.2.4"
   }
