Localize tree mode toggle label

--- a/app/locales/de.json5
+++ b/app/locales/de.json5
@@ -93,6 +93,10 @@
         kappa: 'Kappa',
         lightkeeper: 'Lightkeeper',
       },
+      tree: {
+        mode_tree: 'Zum Baum-Modus wechseln',
+        mode_classic: 'Zurück zum klassischen Modus',
+      },
       primaryviews: {
         all: 'Alle',
         maps: 'Karten',
