rework task action buttons: stateful, iconography, and updated labelling

--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -173,11 +173,11 @@
         increase: 'Increase',
         complete: 'Complete',
         markComplete: 'Mark complete',
-        uncomplete: 'Uncomplete',
+        incomplete: 'Incomplete',
         item: 'Item',
         completebutton: 'Complete',
         unlockbutton: 'Unlock',
-        uncompletebutton: 'Uncomplete',
+        incompletebutton: 'Mark Incomplete',
         availablebutton: 'Mark Available',
         statuscomplete: 'Marked {name} as complete',
         statusuncomplete: 'Marked {name} as uncompleted',
