refactor(ui): standardize filters and improve card interactions
- Needed Items: Add skeleton loader, update filter colors
- Hideout: Refine requirement cards, update filter badges
- Tasks: Use semantic colors in filter bar
- Locales: Add missing keys

--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -177,7 +177,7 @@
         item: 'Item',
         completebutton: 'Complete',
         unlockbutton: 'Unlock',
-        incompletebutton: 'Mark Incomplete',
+        incompletebutton: 'Incomplete',
         availablebutton: 'Mark Available',
         statuscomplete: 'Marked {name} as complete',
         statusuncomplete: 'Marked {name} as uncompleted',
