feat: expand task metadata pipeline and progress repair
- add tarkov API endpoints for bootstrap and split task payloads (core/objectives/rewards) with caching and language validation
- extend GraphQL queries and metadata merges for objectives, fail conditions, rewards, and derived task maps/graphs
- repair legacy progress state for failed alternatives/completed objectives and duplicate objective ids; add progress invalidation helper + test
- refine task actions/filters and task UI (availability for failed-only requirements, objectives, settings modal, map/needed item tweaks)
- add manual task fail preference migration + DB types, update locales and docs

--- a/app/locales/de.json5
+++ b/app/locales/de.json5
@@ -108,6 +108,7 @@
         available: 'Verfügbar',
         completed: 'Abgeschlossen',
         locked: 'Gesperrt',
+        failed: 'Failed',
       },
       userviews: {
         all: 'Alle',
@@ -177,12 +178,21 @@
         completebutton: 'Abgeschlossen',
         availablebutton: 'Als verfügbar markieren',
         uncompletebutton: 'Als unvollständig markieren',
+        markfailed: 'Als fehlgeschlagen markieren',
+        resetfailed: 'Fehlgeschlagen zurücksetzen',
         statuscomplete: '{name} als abgeschlossen markiert',
         statusuncomplete: '{name} als unvollständig markiert',
+        statusfailed: '{name} als fehlgeschlagen markiert',
+        statusresetfailed: 'Fehlgeschlagen-Status für {name} zurückgesetzt',
         statusavailable: 'Alle Voraussetzungen für {name} als abgeschlossen markiert',
         undo: 'Rückgängig',
         undocomplete: 'Abschluss von {name} rückgängig gemacht',
         undouncomplete: 'Unvollständigkeit von {name} rückgängig gemacht',
+        undofailed: 'Fehlschlagen von {name} rückgängig gemacht',
+        undoresetfailed: 'Fehlgeschlagen-Status für {name} wiederhergestellt',
+        markfailedconfirm: 'Diese Aufgabe als fehlgeschlagen markieren? Dies ist nur für Datenprobleme gedacht, wird nicht empfohlen und kann Questlinien blockieren.',
+        failedbecause: 'Fehlgeschlagen wegen',
+        failedbecauseunknown: 'Manuell fehlgeschlagen oder Daten fehlen',
         nonkappa: 'Nicht für Kappa benötigt',
         keysHeader: 'Empfohlene Schlüssel',
         keysSubtext: '(können helfen, aber nicht immer erforderlich)',
