--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -108,6 +108,7 @@
         available: 'Available',
         completed: 'Completed',
         locked: 'Locked',
+        failed: 'Failed',
       },
       userviews: {
         all: 'All',
@@ -144,6 +145,52 @@
           Merchant: 'Merchant',
         },
       },
+      settings: {
+        title: 'Task Settings',
+        description: 'Configure task filters and appearance',
+        tabs: {
+          filters: 'Task Filters',
+          appearance: 'Appearance',
+          advanced: 'Advanced',
+        },
+        filters: {
+          hint: 'Control which tasks appear.',
+          showNonSpecialTasks: 'Show tasks without Lightkeeper, Kappa, or EOD requirement',
+          showNonSpecialTasksTooltip: 'Show regular tasks that do not require Kappa, Lightkeeper, or EOD edition',
+          showKappaTasks: 'Show "Kappa Required" tasks',
+          showKappaTasksTooltip: 'Show tasks required for Kappa container',
+          showEodTasks: 'Show EOD-only tasks',
+          showEodTasksTooltip: 'Show tasks exclusive to Edge of Darkness edition owners',
+          showLightkeeperTasks: 'Show Lightkeeper Tasks and Lightkeeper-required Tasks',
+          showLightkeeperTasksTooltip: 'Show tasks from Lightkeeper trader and tasks required for Lightkeeper',
+        },
+        appearance: {
+          hint: 'Tune how task cards look.',
+          showRequiredLabels: 'Show "Required" labels',
+          showRequiredLabelsTooltip: 'Show labels indicating Kappa or Lightkeeper requirements',
+          showNotRequiredLabels: 'Show "Not Required" labels',
+          showNotRequiredLabelsTooltip: 'Show Non-Kappa labels on tasks not required for Kappa',
+          showExperienceRewards: 'Show experience rewards',
+          showExperienceRewardsTooltip: 'Display experience points rewarded for completing tasks',
+          showTaskIds: 'Show task IDs',
+          showTaskIdsTooltip: 'Display internal task ID at the bottom of each task card',
+          showNextQuests: 'Show next quests',
+          showNextQuestsTooltip: 'Display tasks that will be unlocked after completing this task',
+          showPreviousQuests: 'Show previous quests',
+          showPreviousQuestsTooltip: 'Display tasks that must be completed before this task',
+        },
+        advanced: {
+          hint: 'Use with care. Manual overrides can make debugging harder.',
+          manualFail: 'Enable manual task fail actions',
+          manualFailTooltip: 'Allows marking tasks as failed from the overflow menu (use for recovery only)',
+          repairFailed: 'Repair failed tasks',
+          repairFailedTooltip: 'Clears failed flags that no longer match fail conditions',
+          repairFailedHint: 'Clears failed flags that are not supported by current fail conditions.',
+          repairFailedCount: 'Failed tasks detected: {count}',
+          repairFailedConfirm: 'Repair failed tasks by clearing failed flags that are not supported by current fail conditions?',
+          repairFailedDone: 'Cleared failed status for {count} tasks.',
+        },
+      },
       notasksfound: 'No tasks found. Try changing your filters or updating your level.',
       showing_all_sources: 'Showing all sources',
       loading: 'Loading tasks',
@@ -175,15 +222,24 @@
         markComplete: 'Mark complete',
         uncomplete: 'Uncomplete',
         item: 'Item',
+        markfailed: 'Mark Failed',
         completebutton: 'Complete',
         availablebutton: 'Mark Available',
         uncompletebutton: 'Mark Uncompleted',
+        resetfailed: 'Reset Failed',
         statuscomplete: 'Marked {name} as complete',
         statusuncomplete: 'Marked {name} as uncompleted',
+        statusfailed: 'Marked {name} as failed',
+        statusresetfailed: 'Reset failed status for {name}',
         statusavailable: 'Marked all prerequisites for {name} as complete',
         undo: 'Undo',
         undocomplete: 'Undid completion of {name}',
         undouncomplete: 'Undid uncompleting of {name}',
+        undofailed: 'Undid failing {name}',
+        undoresetfailed: 'Restored failed status for {name}',
+        markfailedconfirm: "Mark this task as failed? This is only for data issues, isn't recommended, and may block questlines.",
+        failedbecause: 'Failed because',
+        failedbecauseunknown: 'Failed manually or data missing',
         nonkappa: 'Not Kappa Required',
         keysHeader: 'Suggested Keys',
         keysSubtext: '(may help but not always required)',
@@ -206,6 +262,8 @@
         unlocksPurchase: 'Unlocks purchase',
         traderRep: '+{standing} {trader}',
         skillReward: '+{level} {skill}',
+        blocked: 'Blocked',
+        blockedTooltip: 'This quest is permanently blocked and can never be completed due to choices made in other quests',
       },
     },
     traders: {
