--- a/app/locales/es.json5
+++ b/app/locales/es.json5
@@ -92,6 +92,7 @@
         available: 'Disponible',
         completed: 'Completadas',
         locked: 'Bloqueadas',
+        failed: 'Failed',
       },
       userviews: {
         all: 'Todos',
@@ -116,12 +117,21 @@
         completebutton: 'Completar',
         availablebutton: 'Marcar como disponible',
         uncompletebutton: 'Marcar como no completado',
+        markfailed: 'Mark Failed',
+        resetfailed: 'Reset Failed',
         statuscomplete: 'Marcado {name} como completo',
         statusuncomplete: 'Marcado {name} como no completado',
+        statusfailed: 'Marked {name} as failed',
+        statusresetfailed: 'Reset failed status for {name}',
         statusavailable: 'Marcados todos los requisitos previos para {name} como completados',
         undo: 'Deshacer',
         undocomplete: 'Deshecha la finalización de {name}',
         undouncomplete: 'Deshecha la marcación de no completado de {name}',
+        undofailed: 'Undid failing {name}',
+        undoresetfailed: 'Restored failed status for {name}',
+        markfailedconfirm: "Mark this task as failed? This is only for data issues, isn't recommended, and may block questlines.",
+        failedbecause: 'Failed because',
+        failedbecauseunknown: 'Failed manually or data missing',
         nonkappa: 'No se requiere Kappa',
         keysneeded: '{keys} necesaria en {map} | {keys} necesarias en {map}',
         objectiveshidden: '{count} objetivos no están en este mapa ({uncompleted} sin completar)',
