--- a/app/locales/fr.json5
+++ b/app/locales/fr.json5
@@ -91,6 +91,7 @@
         available: 'Disponible',
         completed: 'Terminée',
         locked: 'Vérrouillée',
+        failed: 'Failed',
       },
       userviews: {
         all: 'Toutes',
@@ -138,12 +139,21 @@
         completebutton: 'Terminer',
         availablebutton: 'Disponible',
         uncompletebutton: 'Annuler',
+        markfailed: 'Mark Failed',
+        resetfailed: 'Reset Failed',
         statuscomplete: 'Marquer {name} comme terminé',
         statusuncomplete: 'Marquer {name} comme non terminé',
+        statusfailed: 'Marked {name} as failed',
+        statusresetfailed: 'Reset failed status for {name}',
         statusavailable: 'Marquer tous les pre-requis de {name} comme terminés',
         undo: 'Annuler',
         undocomplete: 'Annulation de la finalisation de {name}',
         undouncomplete: 'Annulation du marquage de {name} comme non terminé',
+        undofailed: 'Undid failing {name}',
+        undoresetfailed: 'Restored failed status for {name}',
+        markfailedconfirm: "Mark this task as failed? This is only for data issues, isn't recommended, and may block questlines.",
+        failedbecause: 'Failed because',
+        failedbecauseunknown: 'Failed manually or data missing',
         nonkappa: 'Non requis pour la Kappa',
         keysneeded: '{keys} requis sur {map} | Une des {keys} requis sur {map}',
         objectiveshidden: '{count} objectifs non présent sur la carte ({uncompleted} non terminés)',
