--- a/app/locales/ru.json5
+++ b/app/locales/ru.json5
@@ -91,6 +91,7 @@
         available: 'Доступные',
         completed: 'Завершенные',
         locked: 'Заблокированные',
+        failed: 'Failed',
       },
       userviews: {
         all: 'Все',
@@ -138,12 +139,21 @@
         completebutton: 'Завершено',
         availablebutton: 'Отметить Доступным',
         uncompletebutton: 'Отметить Не Завершенным',
+        markfailed: 'Mark Failed',
+        resetfailed: 'Reset Failed',
         statuscomplete: 'Отмеченно {name} как завершено',
         statusuncomplete: 'Отмечено {name} как не завершено',
+        statusfailed: 'Marked {name} as failed',
+        statusresetfailed: 'Reset failed status for {name}',
         statusavailable: 'Все предварительные условия для {name} отмечены как завершенные',
         undo: 'Отменить',
         undocomplete: 'Отменено завершение {name}',
         undouncomplete: 'Отменено незавершение {name}',
+        undofailed: 'Undid failing {name}',
+        undoresetfailed: 'Restored failed status for {name}',
+        markfailedconfirm: "Mark this task as failed? This is only for data issues, isn't recommended, and may block questlines.",
+        failedbecause: 'Failed because',
+        failedbecauseunknown: 'Failed manually or data missing',
         nonkappa: 'Не требуются для Каппа',
         keysneeded: '{keys} нужны на {map} | Один из {keys} нужен на {map}',
         objectiveshidden: '{count} целей не на этой карте ({uncompleted} не завершено)',
