--- a/app/locales/uk.json5
+++ b/app/locales/uk.json5
@@ -91,6 +91,7 @@
         available: 'Доступні',
         completed: 'Завершені',
         locked: 'Заблоковані',
+        failed: 'Failed',
       },
       userviews: {
         all: 'Усі',
@@ -138,12 +139,21 @@
         completebutton: 'Завершено',
         availablebutton: 'Відзначити Доступним',
         uncompletebutton: 'Відзначити Незавершене',
+        markfailed: 'Mark Failed',
+        resetfailed: 'Reset Failed',
         statuscomplete: 'Відзначено {name} як завершено',
         statusuncomplete: 'Відзначено {name} як незавершене',
+        statusfailed: 'Marked {name} as failed',
+        statusresetfailed: 'Reset failed status for {name}',
         statusavailable: 'Усі попередні умови для {name} позначені як завершені',
         undo: 'Скасувати',
         undocomplete: 'Скасовано завершення {name}',
         undouncomplete: 'Скасовано незавершення {name}',
+        undofailed: 'Undid failing {name}',
+        undoresetfailed: 'Restored failed status for {name}',
+        markfailedconfirm: "Mark this task as failed? This is only for data issues, isn't recommended, and may block questlines.",
+        failedbecause: 'Failed because',
+        failedbecauseunknown: 'Failed manually or data missing',
         nonkappa: 'Не потрібні для Каппа',
         keysneeded: '{keys} потрібні на {map} | Один з {keys} потрібен на {map}',
         objectiveshidden: '{count} цілей не на цій карті ({uncompleted} не завершено)',
